# pdf-minimizer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/: release-notes-template.md
.github/scripts/: update-tap-formula.sh
.github/workflows/: ci.yml  release.yml
examples/: gen_fixture.rs
src/: bilevel.rs  compressor.rs  image_opt.rs  jpeg_transcode.rs  lib.rs  main.rs  stats.rs
tests/: integration_test.rs
